fix video loading on mobile

--- a/wp-content/themes/cheeditha-energy/sass/3-base/_body.scss
+++ b/wp-content/themes/cheeditha-energy/sass/3-base/_body.scss
@@ -1,6 +1,5 @@
 body {
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
-	overflow: hidden;
 	width: 100%;
 
 	section {
